ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(\`fix.me\`)
      services:
        - kind: Service
          name: wordpress
          port: 80
  # tls:
  #   certResolver: myresolver
